add support for inserting multiple pages
